# Phaser

./: .gitignore  CMakeLists.txt  Phaser.jucer  README.md
Source/: FirstOrderAllpass.cpp  FirstOrderAllpass.h  Knob.cpp  Knob.h  ParamsHelper.cpp  ParamsHelper.h  Phaser.cpp  Phaser.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/dsp/: FirstOrderAllpass.cpp  FirstOrderAllpass.h  Phaser.cpp  Phaser.h
plugin/src/gui/components/: FiltersComponent.h  HeaderComponent.h  LFOComponent.h  OutputComponent.h  TopComponent.h  VisualComponent.h
plugin/src/gui/controls/: Button.h  ComboBox.h  Group.h  Knob.h  Label.h  LogoButton.h  PresetPanel.h
plugin/src/gui/controls/lookandfeel/: InvertPolarityLookAndFeel.h  KnobLookAndFeel.h  PowerButtonLookAndFeel.h  ToggleButtonLookAndFeel.h  TransparentButtonLookAndFeel.h  TransparentComboBoxLookAndFeel.h
plugin/src/service/: PresetManger.cpp  PresetManger.h
plugin/src/utils/: Params.cpp  Params.h  ProjectInfo.h  Utils.h
